--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ a{
   position: relative;
   font-size: 16px;
   font-family: sans-serif;
+  position: relative;
 }
 .link{
   display: inline-block;
@@ -47,4 +48,36 @@ a{
 }
 .list-item:hover>.sub-nav-list{
   display: block;
+}
+
+
+.sub-woman-ul {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: -3px;
+  background-color: teal;
+  
+}
+
+.woman-li:hover>.sub-woman-ul {
+  display: block;
+ 
+}
+
+.sub-woman {
+  display: block;
+  text-align: center;
+  text-transform: capitalize;
+  border: 1px solid rgb(1, 90, 90);
+}
+
+.sub-woman-a{
+  display: inline-block;
+  padding: 10px 30px;
+  
+}
+.sub-woman:hover {
+  background-color: rgb(47, 85, 85);
+  
 }
